# mlops-zoomcamp

./: prefect.yaml  pyproject.toml
.prefect/: flows.json
03-orchestration/3.4/: README.md  create_email_block.py  orchestrate.py
03-orchestration/3.5/: orchestrate_s3.py
05-monitoring/: baseline_model_nyc_taxi_data.ipynb  dummy_metrics_calculation.py  evidently_metrics_calculation.py
05-monitoring/dashboards/: fare_amount_metrics.json
cohorts/2023/01-intro/homework/: hw1_solution.ipynb
cohorts/2023/02-experiment-tracking/homework/: hpo.py  register_model.py  train.py
cohorts/2023/02-experiment-tracking/solution-mlflow/: hpo.py  preprocess_data.py  register_model.py  train.py
cohorts/2023/04-deployment/homework/: Dockerfile  pyproject.toml  starter.ipynb  starter.py
cohorts/2023/04-deployment/homework_solution/: batch.py
cohorts/2023/06-best-practices/homework/: batch.py
